--- a/novedades.html
+++ b/novedades.html
@@ -90,7 +90,7 @@
 
 
     <!-- Start ¿Qué es Neek’dna? -->
-    <section class="container pt-0 pb-3 vh-100">
+    <section class="container pt-0 pb-3 ">
         <div class="row text-center mt-5 mb-5">
             <div class="col-lg-8 m-auto ">
                 <h1 class="h2">Novedades</h1>
